<resources>
    <string name="sample_app_name">DJI SDK Sample</string>
    <string name="action_settings">Settings</string>
    <string name="sdk_version">DJI SDK Version: %1$s</string>
    <string name="hint_firmware_upgrade_in_LDM">Enable firmware upgrade under LDM mode</string>
    <string name="connection_loose">Status: No Product Connected</string>
    <string name="connection_only_rc">Status: Only RC Connected</string>
    <string name="model_not_available">Firmware version:N/A</string>
    <string name="product_information">Product Information</string>
    <string name="sdk_registration_message">SDK Registration Failed. Please check the bundle ID and your network
        connectivity. </string>
    <string name="sdk_registration_success_message">SDK Registered Successfully.</string>
    <string name="sdk_registration_doing_message">Registering, pls wait...</string>
    <string name="activity_component_list">Component List</string>
    <string name="start_payload">Start Payload</string>
    <string name="start_payload_send_data">Send Data Activity</string>
    <string name="payload_widget">Payload Widget</string>
    <string name="start_payload_fail">Can not find the payload activity!</string>
    <string name="success">Success</string>
    <string name="login">Login</string>
    <string name="component_listview_ilm_remote_controller">ILM Remote Controller</string>
    <string name="component_listview_ilm_status_bar">ILM Status Bar</string>
    <string name="component_listview_ilm_test">ILM TEST</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="altitude">Altitude</string>
    <string name="stop">Stop</string>
    <string name="land">Land</string>
    <string name="go_to">Go To</string>
    <string name="follow_me">Follow Me</string>
    <string name="_0">0</string>
    <string name="_0_m">0 m</string>
    <string name="_0_m_s">0 m/s</string>
    <string name="_0per">0%</string>
    <string name="battery">Battery</string>
    <string name="speed">Speed</string>
    <string name="distance">Distance</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="z">Z</string>
    <string name="pitch">Pitch</string>
    <string name="roll">Roll</string>
    <string name="yaw">Yaw</string>
    <string name="time_amp_date"><![CDATA[Time & Date]]></string>
    <string name="time_date">00:00 Sunday 1/1/2023</string>
    <string name="component_listview_component">Component</string>
    <string name="component_listview_camera">Camera</string>
    <string name="component_listview_gimbal">Gimbal</string>
    <string name="component_listview_flight_controller">Flight Controller</string>
    <string name="component_listview_battery">Battery</string>
    <string name="component_listview_airlink">Air Link</string>
    <string name="component_listview_remote_controller">Remote Controller</string>
    <string name="component_listview_mobile_remote_controller">Mobile Remote Controller</string>
    <string name="component_listview_dual_remote_controller">Dual Remote Controller</string>
    <string name="component_listview_mission_manager">Mission Manager (Deprecated)</string>
    <string name="component_listview_timeline_mission_control">Timeline Mission Control</string>
    <string name="component_listview_bluetooth">Bluetooth</string>
    <string name="component_listview_access_locker">Access Locker</string>
    <string name="component_listview_accessory_aggregation">Accessory Aggregation</string>
    <string name="component_listview_audio_file_list_manager">Audio File List Manager</string>
    <string name="component_listview_live_stream">Live Stream</string>
    <string name="component_listview_lidar_view">Lidar</string>
    <string name="component_listview_firmware_upgrade">Firmware Upgrade</string>
    <string name="component_listview_utmiss">UTMISS</string>
    <string name="component_listview_multiple_lens_camera">Multiple Lens Camera</string>
    <string name="component_listview_radar">Radar</string>
    <string name="component_listview_ldm">LDM</string>
    <string name="component_listview_sdk_4_0">4.0 New Interfaces</string>
    <string name="component_listview_waypoint_mission_operator">Waypoint Mission Operator</string>
    <string name="component_listview_follow_me_mission_operator">Follow Me Mission Operator</string>
    <string name="component_listview_keyed_interface">Keyed Interface Sample</string>
    <string name="component_listview_sdk_4_1">4.1 New Interfaces</string>
    <string name="component_listview_app_activation">App Activation and ADSB View</string>
    <string name="component_listview_sdk_4_5">4.5 New Interfaces</string>
    <string name="component_listview_sdk_4_6">4.6 New Interfaces</string>
    <string name="component_listview_sdk_4_8">4.8 New Interfaces</string>
    <string name="component_listview_sdk_4_9">4.9 New Interfaces</string>
    <string name="component_listview_sdk_4_11">4.11 New Interfaces</string>
    <string name="component_listview_sdk_4_12">4.12 New Interfaces</string>
    <string name="component_listview_sdk_4_14">4.14 New Interfaces</string>
    <string name="component_listview_sdk_4_15">4.15 New Interfaces</string>
    <string name="component_listview_sdk_4_16">4.16 New Interfaces</string>
    <string name="component_listview_waypointv2">WaypointV2 Mission Operator</string>
    <string name="component_listview_flight_hub">Flight Hub</string>
    <string name="component_listview_payload">Payload</string>
    <string name="component_listview_redirect_to_djigo">Redirect to DJI Go</string>
    <string name="component_listview_redirect_go4">DJI Go 4</string>
    <string name="component_listview_redirect_go4_failure">Cannot redirect to DJI Go 4, Please check if DJI Go 4 has installed</string>
    <string name="component_listview_redirect_go">DJI Go</string>
    <string name="component_listview_redirect_go_failure">Cannot redirect to DJI Go, Please check if DJI Go has installed</string>
    <string name="component_listview_key_manager">KeyManager</string>
    <string name="key_manager_listview_key_Interface">Key Manager View</string>
    <string name="key_manager_component_spinner_title">Component</string>
    <string name="key_manager_sub_component_spinner_title">Sub Component</string>
    <string name="key_manager_key_interface_title">Key Interface</string>
    <string name="key_manager_component_index_title">Component Index</string>
    <string name="key_manager_get_value_desc">Get Value</string>
    <string name="key_manager_set_value_desc">Set Value</string>
    <string name="key_manager_listen_key_desc">Listen Key</string>
    <string name="camera_subtitle_general">General</string>
    <string name="camera_listview_push_info">Push Info</string>
    <string name="camera_listview_iso">Set/Get ISO</string>
    <string name="camera_subtitle_shoot_photo">Shoot Photo</string>
    <string name="camera_listview_shoot_single_photo">Shoot Single Photo</string>
    <string name="camera_listview_shoot_super_resolutiob_photo">Shoot Super Resolution Photo</string>
    <string name="camera_listview_shoot_interval_photo">Shoot Interval Photo</string>
    <string name="camera_subtitle_record_video">Record Video</string>
    <string name="camera_listview_record_video">Record Video</string>
    <string name="camera_subtitle_playback">Playback</string>
    <string name="camera_listview_playback_push_info">Playback Push Info</string>
    <string name="camera_listview_playback_push_info_description">Playback State Information</string>
    <string name="camera_listview_playback_command">Playback Commands</string>
    <string name="camera_listview_playback_download">Playback Download</string>
    <string name="camera_subtitle_media_download">Media Download</string>
    <string name="camera_listview_download_media">Download Media</string>
    <string name="camera_listview_media_playback">Media Manager</string>
    <string name="moveToPosition">Skip Time</string>
    <string name="gimbal_subtitle_rotate_gimbal">Rotate Gimbal</string>
    <string name="gimbal_listview_push_info">Push Info</string>
    <string name="gimbal_listview_rotate_gimbal">Rotate With Speed</string>
    <string name="gimbal_listview_gimbal_capability">Gimbal Capability</string>
    <string name="battery_subtitle">Battery Information</string>
    <string name="battery_listview_push_info">Push Info</string>
    <string name="battery_listview_set_get_discharge_day">Set/Get Discharge Day</string>
    <string name="remote_controller_subtitle">Remote Controller Information</string>
    <string name="remote_controller_listview_push_info">Push Info</string>
    <string name="flight_controller_subtitle_general">General</string>
    <string name="flight_controller_listview_compass_calibration">Compass Calibration</string>
    <string name="flight_controller_listview_flight_limitation">Flight Limitation</string>
    <string name="flight_controller_subtitle_orientation_mode">Orientation Mode</string>
    <string name="flight_controller_listview_orientation_mode">Orientation Mode</string>
    <string name="flight_controller_subtitle_virtual_stick">Virtual Stick</string>
    <string name="flight_controller_listview_virtual_stick">Virtual Stick</string>
    <string name="flight_controller_subtitle_intelligent_flight_assistant">Intelligent Flight Assistant</string>
    <string name="flight_controller_listview_intelligent_flight_assistant">Intelligent Flight Assistant</string>
    <string name="flight_controller_listview_networkRTK">Network RTK</string>
    <string name="airlink_subtitle_wifi_airlink">WiFi Airlink</string>
    <string name="airlink_listview_wifi_set_get_ssid">Set/Get WiFi SSID</string>
    <string name="airlink_listview_wifi_reboot_wifi">Reboot WiFi</string>
    <string name="airlink_subtitle_lb_airlink">Light Bridge Airlink</string>
    <string name="airlink_listview_lb_set_get_channel">Set/Get LBAirlink Channel</string>
    <string name="airlink_listview_ocusync_set_get_channel">Set/Get OcusyncAirlink Channel</string>
    <string name="shoot_single_photo">Shoot Single Photo</string>
    <string name="shoot_single_photo_descritpion">Shoot Single Photo</string>
    <string name="record_video_start_record">Start Record</string>
    <string name="record_video_stop_record">Stop Record</string>
    <string name="record_video_initial_time">00:00:00</string>
    <string name="fetch_media_view_description">Fetch Media</string>
    <string name="fetch_media_view_fetch_thumbnail">Fetch Thumbnail</string>
    <string name="fetch_media_view_fetch_preview">Fetch Preview</string>
    <string name="fetch_media_view_fetch_media">FetchMedia</string>
    <string name="not_support_mediadownload">This product does not support media download function.</string>
    <string name="support_mediadownload">This product supports media download function.</string>
    <string name="pull_up_load_more">Pull up to download more</string>
    <string name="load_finish">No more files</string>
    <string name="fetch_media_loading">Loading...</string>
    <string name="playback_download_description">In this mode, you could download the media file using the playback
        mode. The pre-condition is that camera is in the multiple edit mode.
    </string>
    <string name="playback_download_select_0">1st Photo</string>
    <string name="playback_download_select_1">2nd Photo</string>
    <string name="playback_download_download">Download</string>
    <string name="not_support_playback">This product does not support playback function.</string>
    <string name="support_playback">This product supports playback function.</string>
    <string name="move_gimbal_in_speed_up">Up</string>
    <string name="move_gimbal_in_speed_stop">Stop</string>
    <string name="take_off">Take Off</string>
    <string name="panic">PANIC</string>
    <string name="start_recording">Start Recording</string>
</resources>