<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dji.sdk.sample.demo.ILM.ILM_StatusBar">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:scrollbars="horizontal">

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/battery"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/speed"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/distance"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/x"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/y"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/z"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/pitch"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/roll"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/yaw"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/time_amp_date"
                    android:textColor="@color/black" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView_ILM_BatteryInt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/_0per"
                    android:textColor="#FF0000" />

                <TextView
                    android:id="@+id/textView_ILM_SpeedInt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/_0_m_s"
                    android:textColor="#FF0000" />

                <TextView
                    android:id="@+id/textView_ILM_DistanceInt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/_0_m"
                    android:textColor="#FF0000" />

                <TextView
                    android:id="@+id/textView_ILM_XInt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/_0"
                    android:textColor="#FF0000" />

                <TextView
                    android:id="@+id/textView_ILM_YInt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/_0"
                    android:textColor="#FF0000" />

                <TextView
                    android:id="@+id/textView_ILM_ZInt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/_0"
                    android:textColor="#FF0000" />

                <TextView
                    android:id="@+id/textView_ILM_PitchInt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/_0"
                    android:textColor="#FF0000" />

                <TextView
                    android:id="@+id/textView_ILM_RollInt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/_0"
                    android:textColor="#FF0000" />

                <TextView
                    android:id="@+id/textView_ILM_YawInt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/_0"
                    android:textColor="#FF0000" />

                <TextView
                    android:id="@+id/textView_ILM_DateInt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/time_date"
                    android:textColor="#FF0000" />
            </TableRow>

        </TableLayout>
    </ScrollView>

    <TableLayout
        android:id="@+id/titude_relativeLayout"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="75dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/latitude"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView_ILM_LatitudeInt"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_0"
                android:textColor="#FF0000" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/longitude"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView_ILM_LongitudeInt"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_0"
                android:textColor="#FF0000" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/altitude"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView_ILM_AltitudeInt"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_0"
                android:textColor="#FF0000" />
        </TableRow>
    </TableLayout>
</RelativeLayout>