<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dji.sdk.sample.demo.ILM.ILM_RemoteControllerView">

    <TextureView
        android:id="@+id/video_previewer_surface"
        android:layout_width="wrap_content"
        android:layout_height="350dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        />

    <ScrollView
        android:id="@+id/buttonsScrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:scrollbars="horizontal">

        <LinearLayout
            android:id="@+id/buttons_relativeLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_ILM_Panic_Stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ilm_round_btn_panic"
                android:text="@string/panic"
                android:textColor="@color/common_text_color"
                android:textSize="15sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/layout_ILM_Take_Off"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_ILM_Take_Off"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/red"
                    android:text="@string/take_off"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_ILM_Take_Off"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/ilm_drone_takeoff" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_ILM_Stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_ILM_Stop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/red"
                    android:text="@string/stop"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_ILM_Stop"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/ilm_drone_stop" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_ILM_Land"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_ILM_Land"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/red"
                    android:text="@string/land"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_ILM_Land"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/ilm_drone_land" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_ILM_GoTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_ILM_GoTo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/red"
                    android:text="@string/go_to"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_ILM_GoTo"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/ilm_drone_go_to" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/layout_ILM_Waypoint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_ILM_Waypoint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/red"
                    android:text="Waypoint"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_ILM_Waypoint"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/ilm_waypoint" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_ILM_AddRemoveWaypoint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone">

                <LinearLayout
                    android:id="@+id/layout_ILM_AddWaypoint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView_ILM_AddWaypoint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/red"
                        android:text="Add"
                        android:textColor="@color/white"
                        android:textSize="10sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btn_ILM_AddWaypoint"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:background="@drawable/ilm_addwaypoint" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_ILM_RemoveWaypoint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView_ILM_RemoveWaypoint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/red"
                        android:text="Remove"
                        android:textColor="@color/white"
                        android:textSize="10sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btn_ILM_RemoveWaypoint"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:background="@drawable/ilm_removewaypoint" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_ILM_Enable_VirtualStick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_ILM_Enable_VirtualStick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/red"
                    android:text="Virtual Stick"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_ILM_Enable_VirtualStick"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/ilm_drone_virtualstick" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_ILM_Record"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_ILM_Record"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/red"
                    android:text="@string/start_recording"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_ILM_Record"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/ilm_drone_capture_video_off" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/buttonsScrollView"
        android:layout_alignParentEnd="true"
        android:orientation="vertical">


        <org.osmdroid.views.MapView
            android:id="@+id/mapView_ILM"
            android:layout_width="240dp"
            android:layout_height="150dp"
            android:layout_marginBottom="5dp" />
    </LinearLayout>


</RelativeLayout>